# moviepage

./: .gitignore  .tool-versions  README.md  pyproject.toml
.github/actions/python_deps/: action.yaml
.github/actions/tools/: action.yaml
.github/workflows/: deploy.yaml  pull_screenings.yaml
backend/src/moviepage/: app.py
backend/src/moviepage/theaters/: all_screenings.py
src/moviepage/: app.py
src/moviepage/templates/: index.html
src/moviepage/theaters/: nitehawk.py  theater.py
