[tool.poetry]
name = "moviepage"
version = "0.1.0"
description = "mzapps personal movie homepage"
authors = ["Mike Zappitello <mzappitello@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
save_static_site = "moviepage.app:main"
write_screenings = "moviepage.theaters.all_screenings:write_screenings"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
bs4 = "^0.0.2"
requests = "^2.31.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
ipykernel = "^6.29.0"
types-beautifulsoup4 = "^4.12.0.20240106"
types-requests = "^2.31.0.20240125"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
